# NPuzzleSimplified

./: CMakeLists.txt  TODO.txt  build.sh
GeneratorTestsRunner/: Clean.py  CollectResults.py  RunAll.py  Solvable3x3Runner.py  Solvable4x4Runner.py  Solvable5x5Runner.py  Solvable6x6Runner.py  Unsolvable3x3Runner.py  Unsolvable4x4Runner.py  Unsolvable5x5Runner.py  Unsolvable6x6Runner.py  result.txt  test.txt
Main/: main.cpp
NPuzzleRunner/: main.cpp
NPuzzleSources/: Comparator.hpp  ContainerCreator.cpp  ContainerCreator.hpp  Hash.cpp  Hash.hpp  HeuristicFunctions.cpp  HeuristicFunctions.hpp  IContainer.hpp  Matrix.cpp  Matrix.hpp  Move.hpp  Parser.cpp  Parser.hpp  Printer.hpp  Queue.cpp  Queue.hpp  Result.hpp  Runner.cpp  Runner.hpp  Set.cpp  Set.hpp  Solver.cpp  Solver.hpp  SolverConfiguration.hpp  State.cpp  State.hpp  Types.hpp  Utils.cpp  Utils.hpp
Sources/: ContainerCreator.cpp  HeuristicFunctions.cpp  HeuristicFunctions.hpp  Queue.cpp  Set.cpp  Solver.cpp  Types.hpp  Utils.cpp  Utils.hpp
TesterSources/: Tester.cpp  Tester.hpp
TestsRunner/: main.cpp
UnitTests/: Parser.cpp  Runner.cpp  Solver.cpp  Utils.cpp
UnitTests/Maps/: Solvable3x3.txt  Solvable4x4.txt
